Bug 703948: move pragmas out of function body

Older gcc versions give the error:
"#pragma GCC diagnostic not allowed inside functions",